Created attachment 101089 [details] Simple Writer document with module1.dialog1 The alignment of the number in a numeric field of a dialog does not remain "centered" after closing and reopening the document. It jumps always back to "left".
Confirmed. For reproducers with no prior experience with this type of stuff: Tools - Macros - Organize dialogs. Dig down bug_NumericFieldCentred.odt until you reach Dialog1. Hit Edit, select the numeric field, find Alignment in the properties panel on the left and change the setting to Center. Win 7 64-bit Version: 4.4.0.0.alpha2+ Build ID: c989f5e0e11e295b11ffc921b0d105869e037e47 TinderBox: Win-x86@42, Branch:master, Time: 2014-11-07_22:50:48
Lowered version number after reproducing with: Ubuntu 14.10 64-bit LibreOffice 3.3.0 OOO330m19 (Build:6) tag libreoffice-3.3.0.4
Oliver Specht committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=ffdd3c68205ddaa2d7fd895234461c02f1560e7c tdf#80047: load&save align and valign attributes of NumericField It will be available in 5.2.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hi, Is this bug fixed? If so, could you please close it as RESOLVED FIXED? Regards
no, not yet fixed in Version: 5.1.5.2 Build-ID: 7a864d8825610a8c07cfc3bc01dd4fce6a9447e5
Works now! I tested with Version: 5.2.4.2 Build-ID: 3d5603e1122f0f102b62521720ab13a38a4e0eb0 CPU-Threads: 2; BS-Version: Windows 6.2; UI-Render: Standard; Thanks!!