tdf#80047: load&save align and valign attributes of NumericField

Change-Id: Iff92f050210c112f355803d4d4bcec6b9d289a84