xmlscript/source/xmldlg_imexp/xmldlg_impmodels.cxx
@@ -677,6 +677,8 @@ void NumericFieldElement::endElement()
     }
 
     ctx.importDefaults( _nBasePosX, _nBasePosY, _xAttributes );
+    ctx.importAlignProperty( "Align", "align", _xAttributes );
+    ctx.importVerticalAlignProperty( "VerticalAlign", "valign", _xAttributes );
     ctx.importBooleanProperty( "Tabstop","tabstop",_xAttributes );
     ctx.importBooleanProperty( "ReadOnly", "readonly",_xAttributes );
     ctx.importBooleanProperty( "StrictFormat", "strict-format", _xAttributes );
